--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "@types/react": "16.9.0",
     "@types/react-dom": "16.9.0",
     "@types/react-router-dom": "4.3.5",
-    "ajv": "6.12.0",
+    "ajv": "8.11.0",
     "apexcharts": "^3.35.0",
     "autoprefixer": "^9.1.0",
-    "axios": "0.21.1",
+    "axios": "0.27.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
@@ -60,7 +60,6 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "node-sass": "^4.13.1",
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
     "react-apexcharts": "^1.4.0",
@@ -69,6 +68,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-switch": "^6.0.0",
+    "sass": "^1.51.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "webpack": "4.42.1",
